[package]
name = "notifine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.37", features = ["rt-multi-thread", "macros"] }
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
reqwest-oauth1 = "0.2.4"
oauth = { version = "0.6", package = "oauth1-request" }
ureq = { version="2.9.6", features = ["json"] }
url = "2.5.0"
diesel_migrations = "2.1.0"
